# haskell-tree-sitter

./: .build.yml  .gitignore  .gitmodules  default.nix  pkgs.nix  release.nix  shell.nix
.plan.nix/: tree-sitter-go.nix  tree-sitter-haskell.nix  tree-sitter-java.nix  tree-sitter-json.nix  tree-sitter-nix.nix  tree-sitter-php.nix  tree-sitter-python.nix  tree-sitter-ql.nix  tree-sitter-ruby.nix  tree-sitter-tsx.nix  tree-sitter-typescript.nix  tree-sitter-verilog.nix  tree-sitter.nix
nix/: nix-ghc-ptr.nix  pkgs-from-json.nix  sources.json  toggle-hoogle.nix
nix/pkgs/: nixpkgs-unstable-20190922.json
tree-sitter-verilog/: tree-sitter-verilog.cabal
tree-sitter-verilog/TreeSitter/: Verilog.hs
tree-sitter-verilog/TreeSitter/Verilog/: AST.hs
tree-sitter-verilog/internal/TreeSitter/Verilog/: Internal.hs
tree-sitter/src/: bridge.c
