cabal-version:       2.2
name:                tree-sitter-verilog
version:             0.1.0.0
synopsis:            Tree-sitter grammar/parser for Verilog HDL
description:         This package provides a parser for Verilog suitable for use with the tree-sitter package.
license:             BSD-3-Clause
homepage:            https://git.sr.ht/~madnat/tree-sitter-verilog
author:              Jakub Kopański
maintainer:          jakub@famisoft.pl
copyright:           2019 Famisoft
category:            Tree-sitter, Hardware
build-type:          Simple

library
  exposed-modules:     TreeSitter.Verilog
  build-depends:       base              >= 4.12 && < 5
                     , tree-sitter       >= 0.1 && < 0.3
                     , template-haskell  >= 2.12.0.0 && < 2.15.0.0
                     , tree-sitter-verilog-internal
  default-language:    Haskell2010

library tree-sitter-verilog-internal
  exposed-modules:     TreeSitter.Verilog.Internal
  hs-source-dirs:      internal
  build-depends:       base        >= 4.12 && < 5
                     , tree-sitter >= 0.1 && < 0.3
  default-language:    Haskell2010
  include-dirs:        vendor/tree-sitter-verilog/verilog/src
  install-includes:    tree_sitter/parser.h
  c-sources:           vendor/tree-sitter-verilog/verilog/src/parser.c

source-repository head
  type:     git
  location: https://github.com/tree-sitter/haskell-tree-sitter
