cabal-version:       2.2
name:                tree-sitter-verilog
version:             0.1.0.0
synopsis:            Tree-sitter grammar/parser for Verilog HDL
description:         This package provides a parser for Verilog suitable for use with the tree-sitter package.
license:             BSD-3-Clause
homepage:            https://git.sr.ht/~madnat/tree-sitter-verilog
author:              Jakub Kopański
maintainer:          jakub@famisoft.pl
copyright:           2020 Famisoft
category:            Tree-sitter, Hardware
build-type:          Simple

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.6))
    ghc-options: -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies

library
  import: common
  exposed-modules:     TreeSitter.Verilog
  autogen-modules:     Paths_tree_sitter_verilog
  other-modules:       Paths_tree_sitter_verilog
  build-depends:       base              >= 4.12 && < 5
                     , tree-sitter
                     , template-haskell  >= 2.12 && < 2.16
  include-dirs:        vendor/tree-sitter-verilog/verilog/src
  install-includes:    tree_sitter/parser.h
  c-sources:           vendor/tree-sitter-verilog/verilog/src/parser.c

source-repository head
  type:     git
  location: https://github.com/tree-sitter/haskell-tree-sitter
